refactor: add messageId to createMessage response
