# server/src/swagger/paths/message.yaml
@@ -114,6 +114,11 @@ post:
             properties:
               success:
                 type: boolean
+              data:
+                type: object
+                properties:
+                  messageId:
+                    type: number
     '500':
       $ref: '../openapi.yaml#/components/responses/InternalServerError'
     '600':
